# clearcore-flash-rs

./: .gitignore  Cargo.toml  README.md  build-all.sh  linux-build-all.sh
src/: README.md  app.rs  main.rs  serial.rs  types.rs  ui.rs
src/serial/: download.rs  mod.rs  monitor.rs  upload.rs
src/ui/: ansi_color.rs  common.rs  download_screen.rs  equal_height_row.rs  main_screen.rs  mod.rs  monitor_screen.rs  toast.rs  upload_screen.rs
