[package]
name = "clearcore-flash-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "image"] }
iced_selection = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rfd = "0.17.2"
chrono = "0.4"
tokio-serial = "5.4.5"
bossa = { git = "https://github.com/paul-fornage/BOSSA.git" }
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
cxx = "1.0.192"
cansi = { git = "https://github.com/paul-fornage/cansi.git", rev = "b24dfe3" }

